--- a/title.html
+++ b/title.html
@@ -4,13 +4,13 @@
 <style>
 	  @font-face {
     font-family: "Montserrat-Regular";
-    src: url(Montserrat-Regular.ttf);
+    src: url(res/Montserrat-Regular.ttf);
   }
   
 	body {
 		margin:0;
 		text-align:center;
-                background:#eee;
+		background:#eee;
 		font-family: Montserrat-Regular;
 		}
 		
@@ -217,7 +217,7 @@ margin-bottom:10px;
 			function Clickfour() {
             setTimeout(
               function() {
-               parent.location='favorite.html';
+               parent.location='favorites.html';
            }, 300);
            }
 		</script>
