--- a/title.html
+++ b/title.html
@@ -248,7 +248,7 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clickone() {
             setTimeout(
               function() {
-               parent.location='1/2/index.html';
+               parent.location='001/001';
            }, 400);
            }
 	</script>
