--- a/001/001/index.html
+++ b/001/001/index.html
@@ -266,7 +266,7 @@ document.getElementsByClassName('closefav1')[0].style.display='block';">
   	<img src="closefav.png" class="closefav closefav1">
 
 <script>
-function CreateItems1() {
+function Createitems1() {
   localStorage.setItem("<a href='001/001'><div class='module'><img src='res/dishgu.jpg' class='main-img'><div class='module-txt'>Dishgu 1</div></div></a>", "name");
 }
 </script>
