--- a/001/001/index.html
+++ b/001/001/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
      <meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
+     <script type="text/javascript">
+   document.getElementById("hideAll").style.display = "block";
+ </script> 
+ <script>
+ 	window.onload = function() 
+  { document.getElementById("hideAll").style.display = "none"; }
+</script>
 <style>
 	html {
 		
@@ -18,6 +25,18 @@
                 -moz-user-select: none; /* Firefox */
                 -ms-user-select: none; /* Internet Explorer/Edge */
 		}
+		
+#hideAll
+ {
+   position: fixed;
+   left: 0px; 
+   right: 0px; 
+   top: 0px; 
+   bottom: 0px; 
+   background-color: white;
+   z-index: 999;
+
+ }
 		
 .page {
 	width:100%;
@@ -131,6 +150,8 @@
 </style>
 </head>
 <body>
+	
+	<div style="display: none" id="hideAll"><div class="loading">LOADING..</div></div>
 
 <div class="page-hide"></div>
 
