--- a/latest-stories.html
+++ b/latest-stories.html
@@ -330,12 +330,12 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clickseventeen() {
             setTimeout(
               function() {
-               parent.location='2.html';
+               parent.location='001/003';
            }, 400);
            }
 	</script>
-    <img src="res/raja.jpg" class="main-img" alt="">
-    <div class="module-txt">Raja Thuglan 25</div>
+    <img src="res/kuppi.jpg" class="main-img" alt="">
+    <div class="module-txt">Kuppi Bhoodham 1</div>
   </div>
   
   
@@ -346,12 +346,12 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clickeighteen() {
             setTimeout(
               function() {
-               parent.location='2.html';
+               parent.location='001/002';
            }, 400);
            }
 	</script>
-    <img src="res/shikhari.jpg" class="main-img" alt="">
-    <div class="module-txt">Shikhari Shangu 5</div>
+    <img src="res/mayavi.jpg" class="main-img" alt="">
+    <div class="module-txt">Mayavi 1</div>
   </div>
   
   <div class="module" onclick="Clicknineteen();
@@ -361,12 +361,12 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clicknineteen() {
             setTimeout(
               function() {
-               parent.location='2.html';
+               parent.location='001/001';
            }, 400);
            }
 	</script>
-    <img src="res/akku.jpg" class="main-img" alt="">
-    <div class="module-txt">Akku & Ikku 13</div>
+    <img src="res/dishgu.jpg" class="main-img" alt="">
+    <div class="module-txt">Dishgu 1</div>
   </div>
   
   
