--- a/latest-stories.html
+++ b/latest-stories.html
@@ -12,11 +12,11 @@
 <!-- partial:index.partial.html -->
 <div class="anim-top"></div>
 	<div class="top">
-		<div class="one" onclick="Clickone(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
+		<div class="one" onclick="Clicknavone(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
 		<img src="res/home.png" class="oneimg">
 		</div>
 		<script>
-			function Clickone() {
+			function Clicknavone() {
             setTimeout(
               function() {
                parent.location='title.html';
@@ -24,11 +24,11 @@
            }
 		</script>
 		
-		<div class="two" onclick="Clicktwo(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
+		<div class="two" onclick="Clicknavtwo(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
 			<img src="res/most.png" class="oneimg">
 		</div>
 		<script>
-			function Clicktwo() {
+			function Clicknavtwo() {
             setTimeout(
               function() {
                parent.location='most.html';
@@ -36,11 +36,11 @@
            }
 		</script>
 		
-		<div class="three" onclick="Clickthree(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
+		<div class="three" onclick="Clicknavthree(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
 			<img src="res/filter.png" class="oneimg">
 		</div>
 		<script>
-			function Clickthree() {
+			function Clicknavthree() {
             setTimeout(
               function() {
                parent.location='filter.html';
@@ -48,11 +48,11 @@
            }
 		</script>
 		
-		<div class="four" onclick="Clickfour(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
+		<div class="four" onclick="Clicknavfour(); document.getElementsByClassName('top')[0].style.display='none'; document.getElementsByClassName('anim-top')[0].style.display='block';">
 			<img src="res/favorite.png" class="oneimg">
 		</div>
 		<script>
-			function Clickfour() {
+			function Clicknavfour() {
             setTimeout(
               function() {
                parent.location='favorite.html';
@@ -64,90 +64,13 @@
 <div class="title">Latest Stories</div>
 <section>
   
-  <div class="module" onclick="Clickone();
+  
+  
+    <div class="module" onclick="Clickfourteen();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
 document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
 	<script>
-		function Clickone() {
-            setTimeout(
-              function() {
-               parent.location='1.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/mayavi.jpg" class="main-img" alt="">
-    <div class="module-txt">Mayavi 25<br/>മായാവി</div>
-  </div>
-  
-  
-  <div class="module" onclick="Clicktwo();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clicktwo() {
-            setTimeout(
-              function() {
-               parent.location='2.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/soothran.jpg" class="main-img" alt="">
-    <div class="module-txt">Soothran 25</br/>സൂത്രൻ</div>
-  </div>
-  
-    <div class="module" onclick="Clickthree();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickthree() {
-            setTimeout(
-              function() {
-               parent.location='2.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/dishgu.jpg" class="main-img" alt="">
-    <div class="module-txt">Dishgu 28</div>
-  </div> 
-  
-  
-    <div class="module" onclick="Clickfour();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickfour() {
-            setTimeout(
-              function() {
-               parent.location='2.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/kuppi.jpg" class="main-img" alt="">
-    <div class="module-txt">Kuppi Bhoodham 37</div>
-  </div>
-  
-    <div class="module" onclick="Clickfive();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickfive() {
-            setTimeout(
-              function() {
-               parent.location='5.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/mandan.jpg" class="main-img" alt="">
-    <div class="module-txt">Mandan Subhru 15</div>
-  </div>
-  
-  
-  
-    <div class="module" onclick="Clicksix();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clicksix() {
+		function Clickfourteen() {
             setTimeout(
               function() {
                parent.location='6.html';
@@ -160,86 +83,22 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
   
   
-    <div class="module" onclick="Clickseven();
+    <div class="module" onclick="Clickthirteen();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
 document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
 	<script>
-		function Clickseven() {
+		function Clickthirteen() {
             setTimeout(
               function() {
                parent.location='7.html';
            }, 400);
            }
 	</script>
-    <img src="res/pappoos.png" class="main-img" alt="">
-    <div class="module-txt">Pappoos 7</div>
+    <img src="001/013/001-13.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam"> കരിനാക്കൻ കഥകൾ </span></div>
   </div>
   
   
-  
-    <div class="module" onclick="Clickeight();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickeight() {
-            setTimeout(
-              function() {
-               parent.location='2.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/raja.jpg" class="main-img" alt="">
-    <div class="module-txt">Raja Thuglan 25</div>
-  </div>
-  
-  
-    <div class="module" onclick="Clicknine();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clicknine() {
-            setTimeout(
-              function() {
-               parent.location='2.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/shikhari.jpg" class="main-img" alt="">
-    <div class="module-txt">Shikhari Shangu 5</div>
-  </div>
-  
-  
-  
-  <div class="module" onclick="Clickten();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickten() {
-            setTimeout(
-              function() {
-               parent.location='1.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/mayavi.jpg" class="main-img" alt="">
-    <div class="module-txt">Mayavi 25<br/>മായാവി</div>
-  </div>
-  
-  
-  <div class="module" onclick="Clickeleven();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickeleven() {
-            setTimeout(
-              function() {
-               parent.location='2.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/soothran.jpg" class="main-img" alt="">
-    <div class="module-txt">Soothran 25</br/>സൂത്രൻ</div>
-  </div>
   
     <div class="module" onclick="Clicktwelve();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
@@ -252,82 +111,146 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
            }, 400);
            }
 	</script>
-    <img src="res/dishgu.jpg" class="main-img" alt="">
-    <div class="module-txt">Dishgu 28</div>
-  </div> 
-  
-  
-    <div class="module" onclick="Clickthirteen();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickthirteen() {
-            setTimeout(
-              function() {
-               parent.location='2.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/kuppi.jpg" class="main-img" alt="">
-    <div class="module-txt">Kuppi Bhoodham 37</div>
-  </div>
-  
-    <div class="module" onclick="Clickfourteen();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clickfourteen() {
-            setTimeout(
-              function() {
-               parent.location='5.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/mandan.jpg" class="main-img" alt="">
-    <div class="module-txt">Mandan Subhru 15</div>
+    <img src="001/012/001-12.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam">കാട്ടുകോഴി ഉണ്ടായ കഥ</span></div>
   </div>
   
   
-  
-    <div class="module" onclick="Clickfifteen();
+    <div class="module" onclick="Clickeleven();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
 document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
 	<script>
-		function Clickfifteen() {
+		function Clickeleven() {
             setTimeout(
               function() {
-               parent.location='6.html';
-           }, 400);
-           }
-	</script>
-    <img src="res/mister.jpg" class="main-img" alt="">
-    <div class="module-txt">Mister Bore 46</div>
-  </div>
-  
-  
-  
-    <div class="module" onclick="Clicksixteen();
-document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
-	<script>
-		function Clicksixteen() {
-            setTimeout(
-              function() {
-               parent.location='7.html';
+               parent.location='001/011';
            }, 400);
            }
 	</script>
     <img src="res/pappoos.png" class="main-img" alt="">
-    <div class="module-txt">Pappoos 7</div>
+    <div class="module-txt"><span class="malayalam"> പപ്പൂസ് 1</span></div>
   </div>
   
   
   
-    <div class="module" onclick="Clickseventeen();
+  <div class="module" onclick="Clickten();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
 document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
 	<script>
-		function Clickseventeen() {
+		function Clickten() {
+            setTimeout(
+              function() {
+               parent.location='001/010';
+           }, 400);
+           }
+	</script>
+    <img src="res/dundu.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam"> ഡുണ്ടു മോൻ 1</span></div>
+  </div>
+  
+  
+  <div class="module" onclick="Clicknine();
+document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clicknine() {
+            setTimeout(
+              function() {
+               parent.location='001/009';
+           }, 400);
+           }
+	</script>
+    <img src="res/soothran.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam">സൂത്രൻ</span></div>
+  </div>
+  
+    <div class="module" onclick="Clickeight();
+document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickeight() {
+            setTimeout(
+              function() {
+               parent.location='001/008';
+           }, 400);
+           }
+	</script>
+    <img src="res/raja.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam"> രാജാ തുഗ്ലൻ 1</span></div>
+  </div> 
+  
+  
+    <div class="module" onclick="Clickseven();
+document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickseven() {
+            setTimeout(
+              function() {
+               parent.location='001/007';
+           }, 400);
+           }
+	</script>
+    <img src="res/mandan.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam">മണ്ടൻ സുബ്രു 1</span></div>
+  </div>
+  
+    <div class="module" onclick="Clicksix();
+document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clicksix() {
+            setTimeout(
+              function() {
+               parent.location='001/006';
+           }, 400);
+           }
+	</script>
+    <img src="res/mister.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam">മിസ്റ്റർ ബോർ 1</span></div>
+  </div>
+  
+  
+  
+    <div class="module" onclick="Clickfive();
+document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickfive() {
+            setTimeout(
+              function() {
+               parent.location='001/005';
+           }, 400);
+           }
+	</script>
+    <img src="res/akku.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam"> അക്കു & ഇക്കു 1</span></div>
+  </div>
+  
+  
+  
+    <div class="module" onclick="Clickfour();
+document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickfour() {
+            setTimeout(
+              function() {
+               parent.location='001/004';
+           }, 400);
+           }
+	</script>
+    <img src="res/shikhari.jpg" class="main-img" alt="">
+    <div class="module-txt"><span class="malayalam"> ശിക്കാരി ശങ്കു 1</span></div>
+  </div>
+  
+  
+  
+    <div class="module" onclick="Clickthree();
+document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickthree() {
             setTimeout(
               function() {
                parent.location='001/003';
@@ -335,15 +258,15 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
            }
 	</script>
     <img src="res/kuppi.jpg" class="main-img" alt="">
-    <div class="module-txt">Kuppi Bhoodham 1</div>
+    <div class="module-txt"><span class="malayalam"> കുപ്പി  ഭൂതം 1</span></div>
   </div>
   
   
-    <div class="module" onclick="Clickeighteen();
+    <div class="module" onclick="Clicktwo();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
 document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
 	<script>
-		function Clickeighteen() {
+		function Clicktwo() {
             setTimeout(
               function() {
                parent.location='001/002';
@@ -351,14 +274,14 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
            }
 	</script>
     <img src="res/mayavi.jpg" class="main-img" alt="">
-    <div class="module-txt">Mayavi 1</div>
+    <div class="module-txt"><span class="malayalam"> മായാവി 1 </span></div>
   </div>
   
-  <div class="module" onclick="Clicknineteen();
+  <div class="module" onclick="Clickone();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
 document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
 	<script>
-		function Clicknineteen() {
+		function Clickone() {
             setTimeout(
               function() {
                parent.location='001/001';
@@ -366,7 +289,7 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
            }
 	</script>
     <img src="res/dishgu.jpg" class="main-img" alt="">
-    <div class="module-txt">Dishgu 1</div>
+    <div class="module-txt"><span class="malayalam">ഡിഷ്കു 1</span></div>
   </div>
   
   
