--- a/latest-stories.html
+++ b/latest-stories.html
@@ -2,9 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <title>CodePen - Slide in from bottom boxes</title>
        <meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="res/latest-style.css">
 
+<style>
+	.top {
+		transition:transform 0.8s;
+		}
+</style>
 
 </head>
 <body>
@@ -67,7 +73,8 @@
   
     <div class="module" onclick="Clickfourteen();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickfourteen() {
             setTimeout(
@@ -84,7 +91,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clickthirteen();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickthirteen() {
             setTimeout(
@@ -101,7 +109,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clicktwelve();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clicktwelve() {
             setTimeout(
@@ -117,7 +126,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clickeleven();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickeleven() {
             setTimeout(
@@ -134,7 +144,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
   <div class="module" onclick="Clickten();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickten() {
             setTimeout(
@@ -150,7 +161,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
   <div class="module" onclick="Clicknine();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clicknine() {
             setTimeout(
@@ -165,7 +177,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clickeight();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickeight() {
             setTimeout(
@@ -181,7 +194,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clickseven();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickseven() {
             setTimeout(
@@ -196,7 +210,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clicksix();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clicksix() {
             setTimeout(
@@ -213,7 +228,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clickfive();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)'; 
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)';">
 	<script>
 		function Clickfive() {
             setTimeout(
@@ -230,7 +246,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clickfour();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickfour() {
             setTimeout(
@@ -247,7 +264,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clickthree();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickthree() {
             setTimeout(
@@ -263,7 +281,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
     <div class="module" onclick="Clicktwo();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clicktwo() {
             setTimeout(
@@ -278,7 +297,8 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
   
   <div class="module" onclick="Clickone();
 document.getElementsByTagName('section')[0].style.transform='translateX(-100%)'; 
-document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+document.getElementsByClassName('title')[0].style.transform='translateY(-130px)';
+document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; ">
 	<script>
 		function Clickone() {
             setTimeout(
