--- a/latest-stories.html
+++ b/latest-stories.html
@@ -60,7 +60,7 @@
 			function Clicknavfour() {
             setTimeout(
               function() {
-               parent.location='favorite.html';
+               parent.location='favorites.html';
            }, 300);
            }
 		</script>
