--- a/001/004/index.html
+++ b/001/004/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+   <meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="https://newgengames.github.io/questory/res/style/post-style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
