--- a/001/001/index.html
+++ b/001/001/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	
-	<div class="se-pre-con"></div>
+	<div class="se-pre-con">Loading<br/><br/><br/><br/><br/><br/><br/>Loading</div>
 
 <div class="page-hide"></div>
 
