--- a/title.html
+++ b/title.html
@@ -10,7 +10,7 @@
 	body {
 		margin:0;
 		text-align:center;
-		background:#eee;
+		background:#e1e1e1;
 		font-family: Montserrat-Regular;
 		}
 		
