--- a/001/005/index.html
+++ b/001/005/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
+  	<meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="https://newgengames.github.io/questory/res/style/post-style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
@@ -14,7 +14,7 @@
   </script>
 </head>
 <body>
-	<div class="se-pre-con"></div>
+	<div class="se-pre-con"><div class="loading">LOADING...</div></div>
 
 	<div class="page-hide"></div>
 
@@ -114,12 +114,14 @@ document.getElementsByClassName('prev3')[0].style.display='block';">
 
 <img src="https://newgengames.github.io/questory/res/openfav.png" class="openfav openfav1" onclick="Createitems1();
 document.getElementsByClassName('openfav1')[0].style.display='none'; 
-document.getElementsByClassName('closefav1')[0].style.display='block';">
+document.getElementsByClassName('closefav1')[0].style.display='block';
+document.getElementsByClassName('toast')[0].style.display='block';">
   	<img src="https://newgengames.github.io/questory/res/closefav.png" class="closefav closefav1">
+     <div class="toast">Added to favorites</div>
 
 <script>
 function Createitems1() {
-  localStorage.setItem("<a href='001/005'><div class='module'><img src='res/akku.jpg' class='main-img'><div class='module-txt'>Akku & ikku 1</div></div></a>", "name");
+  localStorage.setItem("<a href='001/005'><div class='module'><img src='res/akku.jpg' class='main-img'><div class='module-txt'> അക്കു & ഇക്കു 1</div></div></a>", "name");
 }
 </script>
 
