--- a/001/009/index.html
+++ b/001/009/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
+  	<meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="https://newgengames.github.io/questory/res/style/post-style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
@@ -14,10 +14,34 @@
   </script>
 </head>
 <body>
-	<div class="se-pre-con"></div>
+	<div class="se-pre-con"><div class="loading">LOADING...</div></div>
 
 	<div class="page-hide"></div>
 
+<div class="zoom1x" onclick="
+document.getElementsByClassName('img1')[0].style.width='100%'; 
+document.getElementsByClassName('img1')[0].style.height='120%'; 
+document.getElementsByClassName('img2')[0].style.width='100%'; 
+document.getElementsByClassName('img2')[0].style.height='120%';
+document.getElementsByClassName('img3')[0].style.width='100%'; 
+document.getElementsByClassName('img3')[0].style.height='120%';
+document.getElementsByClassName('img4')[0].style.width='100%'; 
+document.getElementsByClassName('img4')[0].style.height='120%';
+document.getElementsByTagName('body')[0].style.overflow='hidden';
+document.getElementsByClassName('zoom15x')[0].style.opacity='0.3'; 
+document.getElementsByClassName('zoom1x')[0].style.opacity='0.7'; ">1.0X</div>
+        <div class="zoom15x" onclick="
+document.getElementsByClassName('img1')[0].style.width='150%'; 
+document.getElementsByClassName('img1')[0].style.height='150%';
+document.getElementsByClassName('img2')[0].style.width='150%'; 
+document.getElementsByClassName('img2')[0].style.height='150%';
+document.getElementsByClassName('img3')[0].style.width='150%'; 
+document.getElementsByClassName('img3')[0].style.height='150%';
+document.getElementsByClassName('img4')[0].style.width='150%'; 
+document.getElementsByClassName('img4')[0].style.height='150%';
+document.getElementsByTagName('body')[0].style.overflow='visible';
+document.getElementsByClassName('zoom15x')[0].style.opacity='0.7'; 
+document.getElementsByClassName('zoom1x')[0].style.opacity='0.3'; ">1.5X</div>
 
 
 <div class="img-bg">
@@ -116,35 +140,16 @@ document.getElementsByClassName('prev4')[0].style.display='block';">
 
 <img src="https://newgengames.github.io/questory/res/openfav.png" class="openfav openfav1" onclick="Createitems1();
 document.getElementsByClassName('openfav1')[0].style.display='none'; 
-document.getElementsByClassName('closefav1')[0].style.display='block';">
+document.getElementsByClassName('closefav1')[0].style.display='block';
+document.getElementsByClassName('toast')[0].style.display='block';">
   	<img src="https://newgengames.github.io/questory/res/closefav.png" class="closefav closefav1">
+     <div class="toast">Added to favorites</div>
 
 <script>
 function Createitems1() {
-  localStorage.setItem("<a href='001/009'><div class='module'><img src='res/soothran.jpg' class='main-img'><div class='module-txt'>Soothran 1</div></div></a>", "name");
+  localStorage.setItem("<a href='001/009'><div class='module'><img src='res/soothran.jpg' class='main-img'><div class='module-txt'> സൂത്രൻ 1</div></div></a>", "name");
 }
 </script>
-
-<div class="zoom1x" onclick="
-document.getElementsByClassName('img1')[0].style.width='100%'; 
-document.getElementsByClassName('img1')[0].style.height='120%'; 
-document.getElementsByClassName('img2')[0].style.width='100%'; 
-document.getElementsByClassName('img2')[0].style.height='120%';
-document.getElementsByClassName('img3')[0].style.width='100%'; 
-document.getElementsByClassName('img3')[0].style.height='120%';
-document.getElementsByTagName('body')[0].style.overflow='hidden';
-document.getElementsByClassName('zoom15x')[0].style.opacity='0.3'; 
-document.getElementsByClassName('zoom1x')[0].style.opacity='0.7'; ">1.0X</div>
-        <div class="zoom15x" onclick="
-document.getElementsByClassName('img1')[0].style.width='150%'; 
-document.getElementsByClassName('img1')[0].style.height='150%';
-document.getElementsByClassName('img2')[0].style.width='150%'; 
-document.getElementsByClassName('img2')[0].style.height='150%';
-document.getElementsByClassName('img3')[0].style.width='150%'; 
-document.getElementsByClassName('img3')[0].style.height='150%';
-document.getElementsByTagName('body')[0].style.overflow='visible';
-document.getElementsByClassName('zoom15x')[0].style.opacity='0.7'; 
-document.getElementsByClassName('zoom1x')[0].style.opacity='0.3'; ">1.5X</div>
 
 </body>
 </html>
