--- a/latest-stories.html
+++ b/latest-stories.html
@@ -79,7 +79,7 @@ document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; "
 		function Clickfourteen() {
             setTimeout(
               function() {
-               parent.location='6.html';
+               parent.location='001/014';
            }, 400);
            }
 	</script>
@@ -97,7 +97,7 @@ document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; "
 		function Clickthirteen() {
             setTimeout(
               function() {
-               parent.location='7.html';
+               parent.location='001/013';
            }, 400);
            }
 	</script>
@@ -115,7 +115,7 @@ document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; "
 		function Clicktwelve() {
             setTimeout(
               function() {
-               parent.location='2.html';
+               parent.location='001/012';
            }, 400);
            }
 	</script>
