--- a/title.html
+++ b/title.html
@@ -337,11 +337,11 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clicktwotwo() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='001/facts/002';
            }, 400);
            }
 	</script>
-    <img src="res/soothran.jpg" class="main-img" alt="">
+    <img src="001/facts/002/001-2.jpg" class="main-img" alt="">
     <div class="module-txt">Soothran 25</div>
   </div>
   
@@ -353,11 +353,11 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clicktwothree() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='001/facts/001';
            }, 400);
            }
 	</script>
-    <img src="res/akku.jpg" class="main-img" alt="">
+    <img src="001/facts/001/001-1.jpg" class="main-img" alt="">
     <div class="module-txt">Akku & Ikku 7</div>
   </div>
   
