--- a/title.html
+++ b/title.html
@@ -10,7 +10,7 @@
 	body {
 		margin:0;
 		text-align:center;
-		background:#e1e1e1;
+		background:#eee;
 		font-family: Montserrat-Regular;
 		}
 		
@@ -235,7 +235,7 @@ document.getElementsByClassName('bottom')[0].style.transform='translateX(-100%)'
 		function SeeAllOne() {
             setTimeout(
               function() {
-               parent.location='latest-stories.html';
+               parent.location='latest-comics.html';
            }, 500);
            }
 	</script>
@@ -304,7 +304,7 @@ document.getElementsByClassName('bottom')[0].style.transform='translateX(-100%)'
 		function SeeAllTwo() {
             setTimeout(
               function() {
-               parent.location='latest-stories.html';
+               parent.location='latest-facts.html';
            }, 500);
            }
 	</script>
@@ -321,7 +321,7 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clicktwoone() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='001/facts/003';
            }, 400);
            }
 	</script>
@@ -341,7 +341,7 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
            }, 400);
            }
 	</script>
-    <img src="001/facts/002/001-2.jpg" class="main-img" alt="">
+    <img src="res/soothran.jpg" class="main-img" alt="">
     <div class="module-txt">Soothran 25</div>
   </div>
   
@@ -357,7 +357,76 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
            }, 400);
            }
 	</script>
-    <img src="001/facts/001/001-1.jpg" class="main-img" alt="">
+    <img src="res/akku.jpg" class="main-img" alt="">
+    <div class="module-txt">Akku & Ikku 7</div>
+  </div>
+  
+  
+  
+  
+  <!--latest non comics-->
+	  <div class="bottom-top" style="display:flex; width:100%;">
+		<div class="h1" >Latest Noncomics</div> <div class="see-all" onclick="SeeAllThree();
+document.getElementsByClassName('bottom')[0].style.transform='translateX(-100%)';">SEE ALL</div>
+	  </div>
+	<script>
+		function SeeAllThree() {
+            setTimeout(
+              function() {
+               parent.location='latest-noncomics.html';
+           }, 500);
+           }
+	</script>
+		
+	  
+		
+		<section class="section2">
+  
+  <div class="module" onclick="Clickthreeone();
+document.getElementsByClassName('bottom')[0].style.transform='translateX(-100%)';
+document.getElementsByClassName('section2')[0].style.transform='translateX(-100%)'; 
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickthreeone() {
+            setTimeout(
+              function() {
+               parent.location='1.html';
+           }, 400);
+           }
+	</script>
+    <img src="res/mayavi.jpg" class="main-img" alt="">
+    <div class="module-txt">Mayavi 25<br/>മായാവി</div>
+  </div>
+  
+  
+    <div class="module" onclick="Clickthreetwo();
+document.getElementsByClassName('bottom')[0].style.transform='translateX(-100%)';
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickthreetwo() {
+            setTimeout(
+              function() {
+               parent.location='1.html';
+           }, 400);
+           }
+	</script>
+    <img src="res/soothran.jpg" class="main-img" alt="">
+    <div class="module-txt">Soothran 25</div>
+  </div>
+  
+  
+    <div class="module" onclick="Clickthreethree();
+document.getElementsByClassName('bottom')[0].style.transform='translateX(-100%)';
+document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'; ">
+	<script>
+		function Clickthreethree() {
+            setTimeout(
+              function() {
+               parent.location='1.html';
+           }, 400);
+           }
+	</script>
+    <img src="res/akku.jpg" class="main-img" alt="">
     <div class="module-txt">Akku & Ikku 7</div>
   </div>
   
