--- a/title.html
+++ b/title.html
@@ -390,12 +390,12 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clickthreeone() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='001/noncomics/003';
            }, 400);
            }
 	</script>
-    <img src="res/mayavi.jpg" class="main-img" alt="">
-    <div class="module-txt">Mayavi 25<br/>മായാവി</div>
+    <img src="001/noncomics/003/001-3.jpg" class="main-img" alt="">
+    <div class="module-txt">ചോക്ലേറ്റ് രക്ഷിച്ചു<br/>മായാവി</div>
   </div>
   
   
@@ -406,12 +406,12 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clickthreetwo() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='001/noncomics/002';
            }, 400);
            }
 	</script>
-    <img src="res/soothran.jpg" class="main-img" alt="">
-    <div class="module-txt">Soothran 25</div>
+    <img src="001/noncomics/002/001-2.jpg" class="main-img" alt="">
+    <div class="module-txt">ധീരാ... ധീരാ... നേതാവേ...</div>
   </div>
   
   
@@ -422,12 +422,12 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clickthreethree() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='001/noncomics/001';
            }, 400);
            }
 	</script>
-    <img src="res/akku.jpg" class="main-img" alt="">
-    <div class="module-txt">Akku & Ikku 7</div>
+    <img src="001/noncomics/001/001-1.jpg" class="main-img" alt="">
+    <div class="module-txt">അടച്ചിട്ട മുറിയിലെ ചിത്രം</div>
   </div>
   
   
