--- a/filter.html
+++ b/filter.html
@@ -84,7 +84,7 @@ document.getElementsByClassName('title')[0].style.transform='translateY(-100px)'
 		function Clickten() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='filter/characters/mayavi.html';
            }, 400);
            }
 	</script>
