--- a/filter/characters/mayavi.html
+++ b/filter/characters/mayavi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>CodePen - Slide in from bottom boxes</title>
        <meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
-<link rel="stylesheet" href="res/latest-style.css">
+<link rel="stylesheet" href="https://newgengames.github.io/questory/res/latest-style.css">
 
 <style>
 	.top {
@@ -84,7 +84,7 @@ document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; "
            }, 400);
            }
 	</script>
-    <img src="res/dishgu.jpg" class="main-img" alt="">
+    <img src="https://newgengames.github.io/questory/res/dishgu.jpg" class="main-img" alt="">
     <div class="module-txt"><span class="malayalam">ഡിഷ്കു 1</span></div>
   </div>
   
@@ -94,7 +94,7 @@ document.getElementsByClassName('top')[0].style.transform='translateY(-90px)'; "
 
 </section>
 <!-- partial -->
-  <script src='res/jquery.js'></script><script  src="res/latest-script.js"></script>
+  <script src='https://newgengames.github.io/questory/res/jquery.js'></script><script  src="https://newgengames.github.io/questory/res/latest-script.js"></script>
 
 </body>
 </html>
