--- a/filter.html
+++ b/filter.html
@@ -118,7 +118,7 @@ document.getElementsByClassName('top')[0].style.display='block'; ">
 		function Clickten() {
             setTimeout(
               function() {
-               parent.location='1.html';
+               parent.location='filter/characters/mayavi.html';
            }, 400);
            }
 	</script>
